crates/solidity-v2/testing/snapshots/cst_output/Statements/recovery_ignore_multiple_empty_matches/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected CloseParen. One of Semicolon was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/Statements/recovery_ignore_multiple_empty_matches/input.sol:4:8]
   │
 4 │ for(int)
   │        ┬  
   │        ╰── Error occurred here.
───╯
